# docassemble-MATCSeparationAgreement

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/ADivorceAgreement/data/questions/: a_divorce_agreement.yml  divorceagreement.yml  ma1a_portable_schema.yml  main_separation_agreement.yml  separation_agreement.yml
docassemble/MATCSeparationAgreement/data/questions/: a_divorce_agreement.yml  main_separation_agreement.yml  separation_agreement.yml
docassemble/MATCSeparationAgreement/data/templates/: a_divorce_agreement.docx
