[build-system]
requires = [
    "setuptools>=80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.MATCSeparationAgreement"
version = "1.0"
description = "1A Divorce Agreement"
readme = "README.md"
authors = [
    { name = "", email = "alara.akisik@su.suffolk.edu" },
]
dependencies = [
    "docassemble.ALMassachusetts @ git+https://github.com/suffolklitlab/docassemble-ALMassachusetts.git@main",
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]
license = "MIT"
license-files = [
    "LICENSE",
]

[project.urls]
Homepage = "https://courtformsonline.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
